@@ -166,6 +166,7 @@
   (a_jelly_doughnut at phpbb dot com, Pierre)
 - Fixed bug #50953 (socket will not connect to IPv4 address when the host has
   both IPv4 and IPv6 addresses, on Windows). (Gustavo, Pierre)
+- Fixed bug #50579 (RegexIterator::REPLACE doesn't work). (Felipe)
 - Fixed bug #50524 (proc_open on Windows does not respect cwd as it does on
   other platforms). (Pierre)
 - Fixed bug #50345 (nanosleep not detected properly on some solaris versions).
